Use correct enum for BUILTIN and BYTECODE_HANDLER

Bug: chromium:753973
Change-Id: Ib30bd11ebabfd364d6cee6d31b11c01744e13520
Reviewed-on: https://chromium-review.googlesource.com/c/1286389
Reviewed-by: Jakob Gruber <jgruber@chromium.org>
Commit-Queue: Takuto Ikuta <tikuta@chromium.org>
Cr-Commit-Position: refs/heads/master@{#56713}